@@ -63,6 +63,15 @@ public class My5250 implements BootListener,TN5250jConstants,SessionListener {
       }
 
       loadSessions();
+      try {
+         Class.forName("org.tn5250j.scripting.JPythonInterpreterDriver");
+      }
+      catch (java.lang.NoClassDefFoundError ncdfe) {
+         System.out.println("Failed to load interpreter drivers " + ncdfe);
+      }
+      catch (Exception ex) {
+         System.out.println("Failed to load interpreter drivers " + ex);
+      }
 
       focused = createImageIcon("focused.gif");
       unfocused = createImageIcon("unfocused.gif");
